--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-*/*.tfvars
-*/terraform.tfstate
-*/terraform.tfstate.backup
-*/.terraform
+**/*.tfvars
+**/terraform.tfstate
+**/terraform.tfstate.backup
+**/.terraform
+**/inventory
