--- a/playbooks/roles/dashboard/tasks/main.yml
+++ b/playbooks/roles/dashboard/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 - name: install dashboard
   command: >
-    kubectl create -f
+    kubectl apply -f
     https://rawgit.com/kubernetes/dashboard/master/src/deploy/kubernetes-dashboard.yaml
