fix domain remove

--- a/playbooks/roles/cloudflare/tasks/main.yml
+++ b/playbooks/roles/cloudflare/tasks/main.yml
@@ -47,5 +47,5 @@
 
 - name: remove domain name from known_hosts
   local_action: >
-    command ssh-keygen -R {{cf_record}}.{{cf_zone}}
+    command ssh-keygen -R {{ cf_record | lower }}.{{ cf_zone }}
   when: cf_record_state == "absent"
