--- a/playbooks/knownhosts-rm.yml
+++ b/playbooks/knownhosts-rm.yml
@@ -7,6 +7,7 @@
         command ssh-keygen -R {{ansible_ssh_host}}
 
 - hosts: edge
+  serial: 1
   gather_facts: False
   tasks:
     - name: remove edge entry
