--- a/playbooks/roles/cloudflare/tasks/main.yml
+++ b/playbooks/roles/cloudflare/tasks/main.yml
@@ -46,6 +46,7 @@
     account_api_token: "{{ cf_token }}"
 
 - name: remove domain name from known_hosts
+  serial: 1
   local_action: >
     command ssh-keygen -R {{ cf_record | lower }}.{{ cf_zone }}
   when: cf_record_state == "absent"
