--- a/terraform.tfvars.template
+++ b/terraform.tfvars.template
@@ -1,14 +1,14 @@
-cluster_prefix = ""
-KuberNow_image = ""
-keypair_name = ""
-private_network = ""
-kubeadm_token = ""
+cluster_prefix = "my_KubeNow"
+KuberNow_image = "KubeNow" # Name of image created with Packer
+keypair_name = "my-clud-keypair" # Name of Keypair in OpenStack project (for ssh node access)
+private_network = "my_internal_net_name" # Name(Label) of the network to attach the nodes to
+kubeadm_token = "c52ddf.f9324a7fa5058c6f" # you can run generate_kubetoken.sh to create a valid token
 
-master_flavor = ""
-floating_ip_pool = ""
+master_flavor = "s1.medium" # a to small node might cause diffuse errors on your installation
+floating_ip_pool = "ip_pool_name"
 
-node_count = ""
-node_flavor = ""
+node_count = "3"
+node_flavor = "s1.medium" # a to small node might cause diffuse errors on your installation
 
-edge_count = ""
-edge_flavor = ""
+edge_count = "1"
+edge_flavor = "s1.medium" # a to small node might cause diffuse errors on your installation
