--- a/terraform.tfvars.template
+++ b/terraform.tfvars.template
@@ -1,14 +1,19 @@
-cluster_prefix = "my_KubeNow"
+# Cluster configuration
+cluster_prefix = "KubeNow" # Your cluster prefix
 KuberNow_image = "KubeNow" # Name of image created with Packer
-keypair_name = "my-clud-keypair" # Name of Keypair in OpenStack project (for ssh node access)
-private_network = "my_internal_net_name" # Name(Label) of the network to attach the nodes to
-kubeadm_token = "c52ddf.f9324a7fa5058c6f" # you can run generate_kubetoken.sh to create a valid token
+keypair_name = "my-clud-keypair" # Name of keypair in OpenStack project (for ssh node access)
+private_network = "my_internal_net_name" # Name of the network to fire up the instances on
+kubeadm_token = "your-kubeadm-token" # You can run generate_kubetoken.sh to create a valid token
 
-master_flavor = "s1.medium" # a to small node might cause diffuse errors on your installation
-floating_ip_pool = "ip_pool_name"
+# Master configuration
+# obs: too flavors might cause diffuse errors on your installation
+master_flavor = "your-master-flavor" 
+floating_ip_pool = "your-pool-name"
 
+# Node configuration
 node_count = "3"
-node_flavor = "s1.medium" # a to small node might cause diffuse errors on your installation
+node_flavor = "s1.medium" 
 
-edge_count = "1"
-edge_flavor = "s1.medium" # a to small node might cause diffuse errors on your installation
+# Edge configuration
+edge_count = "2"
+edge_flavor = "s1.medium" 
