--- a/stacks/traefik-lb/roles/cloudflare/tasks/main.yml
+++ b/stacks/traefik-lb/roles/cloudflare/tasks/main.yml
@@ -8,7 +8,6 @@
     cf_record: "*"
   when:
     - cf_subdomain is undefined
-    - inventory_hostname in groups['edge']
 
 - name: set wildcard record (with subdomain)
   local_action: set_fact
@@ -16,23 +15,6 @@
     cf_record: "*.{{cf_subdomain}}"
   when:
     - cf_subdomain is defined
-    - inventory_hostname in groups['edge']
-
-- name: set master record
-  local_action: set_fact
-  args:
-    cf_record: "{{inventory_hostname}}"
-  when:
-    - cf_subdomain is undefined
-    - inventory_hostname in groups['master']
-
-- name: set master record (with subdomain)
-  local_action: set_fact
-  args:
-    cf_record: "{{inventory_hostname}}.{{cf_subdomain}}"
-  when:
-    - cf_subdomain is defined
-    - inventory_hostname in groups['master']
 
 - name: call cloudlare API
   local_action: cloudflare_dns
@@ -41,6 +23,6 @@
     record: "{{ cf_record }}"
     type: A
     value: "{{ ansible_ssh_host }}"
-    state: "{{ cf_record_state }}"
+    state: "present"
     account_email: "{{ cf_mail }}"
     account_api_token: "{{ cf_token }}"
