--- a/test/cheese-deployment.yml
+++ b/test/cheese-deployment.yml
@@ -1,9 +1,11 @@
+---
+# This tests also weave-network and traefik-lb (implicitly)
+# TODO: make explicit tests for weave-network and traefik-lb
 - hosts: localhost
   connection: local
   gather_facts: False
   force_handlers: True
   vars:
-    host_cloud: openstack
     node_count: 6 # see roles/test-terraform/templates
   roles:
     - test-terraform
