--- a/test/roles/test-terraform/tasks/main.yml
+++ b/test/roles/test-terraform/tasks/main.yml
@@ -1,27 +1,20 @@
-- name: "generate test facts"
+- name: "generate test timestamp"
   set_fact:
-    timestamp: "{{lookup('pipe','date +%Y%m%d%H%M%S')}}"
-    tokenID: "{{lookup('pipe','openssl rand -hex 3')}}"
-    tokenVal: "{{lookup('pipe','openssl rand -hex 8')}}"
-
-- name: "generate kubeadm_token"
-  set_fact:
-    kubeadm_token: "{{tokenID}}.{{tokenVal}}"
+    test_timestamp: "{{lookup('pipe','date +%Y%m%d%H%M%S')}}"
 
 - name: "render tfvars"
   template:
   args:
-    src: "{{host_cloud}}.tfvars.j2"
+    src: "{{playbook_dir}}/secrets-kubenow/tfvars/{{host_cloud}}.tfvars.j2"
     dest: "{{playbook_dir}}/../terraform.tfvars"
 
 - name: "terraform get {{host_cloud}}"
   command: terraform get {{host_cloud}}
   args:
     chdir: "{{playbook_dir}}/.."
+  notify: "terraform destroy {{host_cloud}}"
 
 - name: "terraform apply {{host_cloud}}"
   command: terraform apply {{host_cloud}}
   args:
     chdir: "{{playbook_dir}}/.."
-  notify: "terraform destroy {{host_cloud}}"
-  
