--- a/test/cheese-deployment.yml
+++ b/test/cheese-deployment.yml
@@ -6,7 +6,13 @@
   gather_facts: False
   force_handlers: True
   vars:
-    node_count: 6 # see roles/test-terraform/templates
+    node_count: 6
+    cf_zone: uservices.cloud
+  pre_tasks:
+    - name: "get test timestamp"
+      set_fact:
+        test_timestamp: "{{lookup('pipe','date +%Y%m%d%H%M%S')}}"
   roles:
     - test-terraform
     - test-bootstrap
+    - test-cheese
