add build timestamp as message

--- a/test/cheese-deployment.yml
+++ b/test/cheese-deployment.yml
@@ -12,6 +12,7 @@
     - name: "get test timestamp"
       set_fact:
         test_timestamp: "{{lookup('pipe','date +%Y%m%d%H%M%S')}}"
+    - debug: msg="{{host_cloud}} build timestamp: {{test_timestamp}}"
   roles:
     - test-packer
     - test-terraform
