fix debug message

--- a/test/pre_tasks/get_timestamp.yml
+++ b/test/pre_tasks/get_timestamp.yml
@@ -1,4 +1,7 @@
 - name: "get test timestamp"
   set_fact:
     test_timestamp: "{{lookup('pipe','date +%Y%m%d%H%M%S')}}"
-- debug: msg="{{host_cloud}} build timestamp: {{test_timestamp}}"
+- name: "print host_cloud"
+  debug: var=host_cloud
+- name: "print timestamp"
+  debug: var=test_timestamp
