--- a/stacks/gluster-storage/gluster-daemonset.yml
+++ b/stacks/gluster-storage/gluster-daemonset.yml
@@ -1,23 +1,40 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: gluster-server
+spec:
+  selector:
+    k8s-app: gluster-server
+  clusterIP: None
+  ports:
+  - name: dummy
+    targetPort: 1
+    port: 1
+
+---
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: gluster-server
-  namespace: kube-system
+  namespace: default
   labels:
-    k8s-app: gluster-storage
+    k8s-app: gluster-server
     kubernetes.io/cluster-service: "true"
 spec:
+  selector:
+    matchLabels:
+      k8s-app: gluster-server
   template:
     metadata:
       labels:
-        k8s-app: gluster-storage
-        name: gluster-storage
+        k8s-app: gluster-server
     spec:
-      hostNetwork: true
       terminationGracePeriodSeconds: 60
       containers:
-      - image: kubenow/glusterfs
-        name: gluster-storage
+      - name: gluster-server
+        image: kubenow/gluster-server
         imagePullPolicy: Always
+        securityContext:
+          privileged: true
       nodeSelector:
         role: storage
