--- a/stacks/gluster-storage/main.yml
+++ b/stacks/gluster-storage/main.yml
@@ -1,21 +1,5 @@
----
 - hosts: master
   gather_facts: False
-  tasks:
-    - name: create gluster etc directory
-      become: yes
-      file:
-        path: /etc/gluster
-        state: directory
-        mode: 0755
-
-    - name: copy gluster DaemonSet configuration
-      become: yes
-      template:
-        src: glusterfs.yml.j2
-        dest: "/etc/gluster/glusterfs.yml"
-
-    - name: start gluster DaemonSet
-      command: >
-        kubectl apply -f
-        /etc/gluster/glusterfs.yml
+  roles:
+    - gluster-server
+    - shared-volume
