--- a/stacks/gluster-storage/roles/gluster-server/tasks/main.yml
+++ b/stacks/gluster-storage/roles/gluster-server/tasks/main.yml
@@ -56,7 +56,7 @@
 - set_fact:
     enpoint_list: "[\"{{get_ips.stdout | replace(' ','\",\"')}}\"]"
 
-- name: "peer probe"
+- name: "gluster peer probe"
   command: >
     kubectl exec --namespace gluster {{get_name.stdout}}
     gluster peer probe {{item}}
