--- a/stacks/gluster-storage/roles/gluster-server/files/gluster-daemonset.yml
+++ b/stacks/gluster-storage/roles/gluster-server/files/gluster-daemonset.yml
@@ -3,7 +3,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: gluster-server
-  namespace: gluster
+  namespace: default
   labels:
     k8s-app: gluster-server
     kubernetes.io/cluster-service: "true"
@@ -56,7 +56,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: gluster-server
-  namespace: gluster
+  namespace: default
 spec:
   selector:
     k8s-app: gluster-server
