--- a/stacks/gluster-storage/roles/shared-volume/tasks/main.yml
+++ b/stacks/gluster-storage/roles/shared-volume/tasks/main.yml
@@ -11,7 +11,7 @@
 
 - name: create shared-volume (gluster side)
   command: >
-    kubectl exec --namespace gluster {{get_name.stdout}}
+    kubectl exec {{get_name.stdout}}
     gluster volume create shared-volume
     replica 3 {{gluster_bricks | replace('\n', '')}}
     force
@@ -20,14 +20,14 @@
 
 - name: start shared-volume (gluster side)
   command: >
-    kubectl exec --namespace gluster {{get_name.stdout}}
+    kubectl exec {{get_name.stdout}}
     gluster volume start shared-volume
   tags:
     - gluster_side
 
 - name: get shared-volume cumulative size
   shell: >
-    kubectl exec --namespace gluster {{get_name.stdout}}
+    kubectl exec {{get_name.stdout}}
     gluster volume status shared-volume detail |
     grep 'Disk Space Free' |
     grep -o '[0-9]*\.[0-9]*' |
