added cf_mail in check

--- a/playbooks/roles/cloudflare/tasks/main.yml
+++ b/playbooks/roles/cloudflare/tasks/main.yml
@@ -4,7 +4,7 @@
   when:
     (cf_zone is undefined) or
     (cf_token is undefined) or
-    (cf_zone is undefined)
+    (cf_mail is undefined)
 
 - name: set wildcard record
   local_action: set_fact
