Label regular nodes, so GlusterFS does not run everywhere

--- a/playbooks/roles/gluster-server/files/gluster-daemonset.yml
+++ b/playbooks/roles/gluster-server/files/gluster-daemonset.yml
@@ -50,6 +50,8 @@ spec:
         - hostPath:
             path: /etc/glusterfs
           name: etc
+      nodeSelector:
+        role: node
 
 ---
 apiVersion: v1
