change match pattern so it instead is looking for all pods ready=true instead of Running

--- a/playbooks/roles/gluster-server/tasks/main.yml
+++ b/playbooks/roles/gluster-server/tasks/main.yml
@@ -17,12 +17,12 @@
     kubectl apply -f
     /etc/kubenow/yaml/gluster-daemonset.yml
 
-- name: wait for gluster DaemonSet to be Running
+- name: wait for gluster DaemonSet to be Ready
   command: >
     kubectl get pods
-    -o jsonpath='{.items[?(@.spec.containers[*].name=="gluster-server")].status.phase}'
-  register: get_phase
-  until: get_phase.stdout | match('^(Running\s)*Running$')
+    -o jsonpath='{.items[?(@.spec.containers[*].name=="gluster-server")].status.containerStatuses[*].ready}'
+  register: get_is_ready
+  until: get_is_ready.stdout | match( '^(true\s)*true$' )
   # Wait for 10 minutes
   retries: 120
   delay: 5
