edge labels test [skip ci]

--- a/playbooks/infra-test.yml
+++ b/playbooks/infra-test.yml
@@ -1,3 +1,8 @@
+- hosts: master
+  gather_facts: False
+  roles:
+    - { role: common-test, tags: [ 'minimal' ] }
+
 - hosts: edge
   gather_facts: False
   roles:
