weave-network test [skip ci]

--- a/playbooks/infra-test.yml
+++ b/playbooks/infra-test.yml
@@ -2,6 +2,7 @@
   gather_facts: False
   roles:
     - { role: common-test, tags: [ 'minimal' ] }
+    - { role: weave-network-test, tags: [ 'minimal' ] }
 
 - hosts: edge
   gather_facts: False
