--- a/playbooks/infra-test.yml
+++ b/playbooks/infra-test.yml
@@ -4,6 +4,7 @@
     - { role: common-test, tags: [ 'minimal' ] }
     - { role: weave-network-test, tags: [ 'minimal' ] }
     - { role: start-helm-test, tags: [ 'minimal' ] }
+    - { role: gluster-server-test, tags: [ 'glusterfs' ] }
 
 - hosts: edge
   gather_facts: False
