--- a/playbooks/infra-test.yml
+++ b/playbooks/infra-test.yml
@@ -6,6 +6,7 @@
     - { role: start-helm-test, tags: [ 'minimal' ] }
     - { role: gluster-server-test, tags: [ 'glusterfs' ] }
     - { role: shared-volume-test, tags: [ 'glusterfs' ] }
+    - { role: traefik-test, tags: [ 'traefik' ] }
 
 - hosts: edge
   gather_facts: False
