--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,8 @@ before_install:
   - git submodule update --init --recursive
 
 install:
+
+  # INSTALL DEPS
   # Install deps by HashiCorp
   - >
       curl
@@ -53,8 +55,28 @@ install:
   - sudo pip install dnspython
   # Install OpenStack deps
   - pip install python-glanceclient
+  # Install GCE deps
+  - export CLOUD_SDK_REPO="cloud-sdk-$(lsb_release -c -s)"
+  - >
+      echo "deb https://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" |
+      sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+  - >
+      curl https://packages.cloud.google.com/apt/doc/apt-key.gpg |
+      sudo apt-key add -
+  - sudo apt-get update && sudo apt-get install google-cloud-sdk
+
+  # TEST ENV LOGIN
   # Source CityCloud RC file
   - source test/secrets-kubenow/host_cloud/CityCloud.sh
+  # GCE login
+  - >
+      gcloud auth activate-service-account
+      12202776487-compute@developer.gserviceaccount.com
+      --key-file=/Users/marco/PhenoMeNal-103a10a02d9a.json
+  - >
+      gcloud auth login 12202776487-compute@developer.gserviceaccount.com
+      --project phenomenal-1145
 
 script:
   - ansible-playbook -e "host_cloud=openstack" test/integration-test.yml
+  - ansible-playbook -e "host_cloud=gce" test/integration-test.yml
