--- a/test/roles/test-packer/handlers/main.yml
+++ b/test/roles/test-packer/handlers/main.yml
@@ -19,3 +19,17 @@
     gcloud compute images delete
     'kubenow-{{current_version}}' -q
   when: host_cloud == "gce"
+
+- name: "deregister packer image (aws)"
+  listen: "delete image"
+  command: >
+    aws ec2 deregister-image
+    --image-id {{aws_ami_id}}
+  when: host_cloud == "aws"
+
+- name: "delete packer snapshot (aws)"
+  listen: "delete image"
+  command: >
+    aws ec2 delete-snapshot
+    --snapshot-id {{aws_snap_id}}
+  when: host_cloud == "aws"
