--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ branches:
     - /^dev\/.*$/
     - /^testing\/.*$/
     - /^test\/.*$/
+    - /^doc\/.*$/
+    - /^docs\/.*$/
+    - /^documentation\/.*$/
 
 before_install:
   # Decrypt secrets
