--- a/test/roles/test-core/tasks/main.yml
+++ b/test/roles/test-core/tasks/main.yml
@@ -1,5 +1,6 @@
 - name: "ensure cloudflare configuration is not present"
-  path: "{{playbook_dir}}/../playbooks/roles/cloudflare/vars/conf.yml"
+  file:
+    path: "{{playbook_dir}}/../playbooks/roles/cloudflare/vars/conf.yml"
     state: absent
 
 - name: "render cloudflare configuration"
