clone secrets in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,6 @@ language: python # (Ansible)
 
 sudo: required
 
-git:
-  # Disable default submodule logic
-  submodules: false
-
 branches:
   except:
     - /^experimental\/.*$/
@@ -33,7 +29,7 @@ before_install:
   - eval "$(ssh-agent -s)"
   - ssh-add test/secret/kubenow-ci
   # Get submodules
-  - git submodule update --init --recursive
+  - git clone git@github.com:mcapuccini/secrets-kubenow.git test/secrets-kubenow
 
 install:
 
