--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ branches:
     - /^docs\/.*$/
     - /^documentation\/.*$/
 
+env:
+  - HOST_CLOUD=openstack
+  - HOST_CLOUD=gce
+  - HOST_CLOUD=aws
+
 before_install:
   # Decrypt secrets
   - >
@@ -81,6 +86,4 @@ install:
   - source test/secrets-kubenow/host_cloud/aws.sh
 
 script:
-  - ansible-playbook -e "host_cloud=openstack" test/integration-test.yml
-  - ansible-playbook -e "host_cloud=gce" test/integration-test.yml
-  - ansible-playbook -e "host_cloud=aws" test/integration-test.yml
+  - ansible-playbook -e "host_cloud=$HOST_CLOUD" test/integration-test.yml
