--- a/test/roles/test-packer/tasks/main.yml
+++ b/test/roles/test-packer/tasks/main.yml
@@ -11,7 +11,6 @@
     packer/build-{{host_cloud}}.json
   args:
     chdir: "{{playbook_dir}}/.."
-  notify: "delete image"
   # run asynch (travis needs some polling output)
   async: 1800 # 30 minutes
   poll: 0
@@ -20,6 +19,8 @@
 - name: "wait for packer image to be ready"
   async_status: jid={{ packer_build.ansible_job_id }}
   register: build_result
+  notify: "delete image"
+  # loop until build finishes
   until: build_result.finished
   retries: 30
   delay: 60
