add timeouts to avoid travis to kill the job

--- a/test/roles/test-core/tasks/main.yml
+++ b/test/roles/test-core/tasks/main.yml
@@ -14,8 +14,14 @@
   command: ansible-playbook playbooks/install-core.yml
   args:
     chdir: "{{playbook_dir}}/.."
+  # Timeout to avoid travis to kill the whole job
+  async: 550
+  poll: 10
 
 - name: "run infra-test.yml playbook"
   command: ansible-playbook playbooks/infra-test.yml
   args:
     chdir: "{{playbook_dir}}/.."
+  # Timeout to avoid travis to kill the whole job
+  async: 550
+  poll: 10
