--- a/test/integration-test.yml
+++ b/test/integration-test.yml
@@ -11,7 +11,14 @@
       register: git_describe
     - set_fact:
         current_version: "v{{git_describe.stdout | replace('\n','') | replace('.', '')}}"
+    - set_fact:
+        keep_image: true
+      when: current_version | match("^v[0-9]{3}([ab][0-9]{1,}|rc[0-9]{1,})?$")
   roles:
     - test-packer
     - test-terraform
     - test-core
+  post_tasks:
+    - name: "tests passed flag"
+      set_fact:
+        tests_passed: true
