move passed flag in role

--- a/test/roles/test-core/tasks/main.yml
+++ b/test/roles/test-core/tasks/main.yml
@@ -25,3 +25,7 @@
   # Timeout to avoid travis to kill the whole job
   async: 550
   poll: 10
+
+- name: "set tests_passed flag"
+  set_fact:
+    tests_passed: true
