--- a/playbooks/roles/traefik/files/traefik-daemonset.yml
+++ b/playbooks/roles/traefik/files/traefik-daemonset.yml
@@ -23,6 +23,10 @@ spec:
           - mountPath: /etc/traefik
             name: traefik-volume
             readOnly: false
+        resources:
+          requests:
+            cpu: 1
+            memory: 1G
         args:
         - --web
         - --kubernetes
