if only one node the previous jsonpath pattern .items[*] will fail because json result is not presented in a one item array items[]

--- a/playbooks/roles/common-test/tasks/main.yml
+++ b/playbooks/roles/common-test/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: "get edge labels"
   command: >
     kubectl get nodes {{ edge_names }}
-    -o jsonpath='{@.items[*].metadata.labels.role}'
+    -o jsonpath='{@..metadata.labels.role}'
   register: get_edge_roles
 
 - name: "test edge labels"
